adjusted mobile display of hunkz. fixed z-index on discord button

--- a/src/App.css
+++ b/src/App.css
@@ -11157,6 +11157,7 @@ body {
   width: 100vw;
   padding: 1.5rem;
   position: absolute;
+  z-index: 200;
   display: flex;
   justify-content: space-between;
 }
@@ -11484,11 +11485,17 @@ img {
   height: 100%;
   width: 100%;
   background-color: black;
+  z-index: -1;
   transform: translateY(-100%);
-  transition: all 1s;
+  transition: all 0.5s ease-out;
 }
 
-.discord-button:hover::before {
+.discord-button:hover {
+  color: transparent;
+}
+
+.discord-button:hover::before,
+.discord-button:focus::before {
   transform: translateY(0);
   cursor: pointer;
 }
@@ -11535,16 +11542,32 @@ img {
 /*********************/
 /*********************/
 .hunkz-display {
-  width: 100vw;
+  width: 90vw;
+}
+
+.hunkz-wrapper {
+  width: min-content;
+  margin: 0 auto;
   padding: 2rem;
   display: grid;
+  grid-template-columns: 1fr min-content 1fr;
   grid-template-rows: repeat(4, min-content);
   place-items: center;
   gap: 0.5rem;
 }
 
 .hunkz-title {
+  grid-column: 2;
   font-size: 3rem;
+}
+
+.hunkz-card {
+  grid-column: 2;
+  width: 90%;
+}
+
+.hunkz-card p {
+  font-size: 1.6rem;
 }
 
 .hunkz-img {
@@ -11554,18 +11577,15 @@ img {
   width: 100%;
 }
 
-.hunkz-card p {
-  font-size: 1.8rem;
-}
-
 .hunkz-selector {
+  grid-column: 2;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 0.5rem;
+  gap: 1rem;
 }
 .hunkz-selector button {
-  font-size: 1.7rem;
+  font-size: 1.3rem;
   border: none;
   background: none;
   color: #2a9fd6;
@@ -11753,8 +11773,8 @@ img {
 /*********************/
 /*********************/
 @media (min-width: 40rem) {
-  .hunkz-display {
-    width: 60vw;
+  .hunkz-wrapper {
+    width: 80vw;
     margin: 0 auto;
     grid-template-rows: repeat(2, min-content);
     grid-template-columns: repeat(2, 1fr);
